# project_3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.prod.txt  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_add_cascade_delete_diary_fks.py  002_add_voice_to_personas.py
app/: config.py  main.py
app/api/v1/: alarm.py  auth.py  diary.py  feedback.py  persona.py  router.py  search.py  voice.py
app/core/: security.py
app/models/: __init__.py  ai_feedback.py  diary.py  hashtag.py  persona.py  push_subscription.py  user.py
app/schemas/: diary.py  persona.py  user.py
app/services/: alarm_scheduler.py  alarm_service.py  auth_service.py  diary_service.py  feedback_service.py  gpt_service.py  push_store.py  redis_service.py  search_service.py  stt_service.py  tts_service.py
frontend/: ai-persona.html  alarm.html  diary_detail.html  diary_read.html  diary_write.html  index.html  login.html  my-diary.html  persona-onboarding.html  profile.html  register.html  sw.js
frontend/css/: style.css
frontend/js/: alarm.js  api.js  auth.js  diary.js  frontend.js  stt.js
frontend/test/: alarm.html  stt_test.html  web_speech_test.html  whisper_test.html
nginx/: nginx.conf
scripts/: generate_voice_samples.py  seed_diaries.py
