[project]
name = "malbeot-diary"
version = "0.1.0"
description = "AI 말벗 일기장"
requires-python = ">=3.13,<3.14"

dependencies = [
    # Core
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "click>=8.0.0",
    # Database
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "aiosqlite==0.20.0",       # 로컬 개발용 (SQLite)
    # "asyncpg==0.30.0",       # 프로덕션 배포용 (PostgreSQL)
    # Auth / JWT
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    # Cache / Session Store
    "redis==5.2.1",
    # AI / GPT
    "openai==1.57.2",
    # STT / TTS - Google
    "google-cloud-speech==2.28.0",
    "google-cloud-texttospeech==2.17.0",
    # Scheduler
    "apscheduler==3.10.4",
    # Env
    "python-dotenv==1.0.1",
    # HTTP Client
    "httpx==0.27.2",
    "pydantic-settings>=2.13.1",
    "greenlet>=3.3.2",
    "azure-cognitiveservices-speech>=1.48.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
